--- a/Flight_Prediction_Final/templates/predict.html
+++ b/Flight_Prediction_Final/templates/predict.html
@@ -3,61 +3,54 @@
 
 <head>
   <meta charset="UTF-8" />
-
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
   <link rel="shortcut icon" href="{{ url_for('static', filename='logo.jpg') }}">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Flight Price Prediction</title>
-
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-
   <!-- CSS -->
   <link rel="stylesheet" href="../static/predict.css" />
-
 </head>
 
 <body>
 
-
   <section id="Main">
-    <a href="{{ url_for( 'index' ) }}">
-      <h3>FLIGHT PRICE PREDICTION</h3>
+    <a href="{{ url_for('index') }}">
+      <h3 data-translate-key="brandTitle">FLIGHT PRICE PREDICTION</h3>
     </a>
-    <div>
-      <ul id="navbar">
-        <li><a href="{{ url_for( 'index' ) }}">HOME</a></li>
-        <li><a class="active" href="{{ url_for( 'predict' ) }}">PREDICTION</a></li>
-        <!-- <li><a href="#">OVERVIEW</a></li> -->
-      </ul>
-    </div>
+    <ul id="navbar">
+      <li><a href="{{ url_for('index') }}" data-translate-key="navHome">HOME</a></li>
+      <li><a class="active" href="{{ url_for('predict') }}" data-translate-key="navPrediction">PREDICTION</a></li>
+      <!-- Language Selector on the same line -->
+      <li>
+        <select id="langSelector" style="border-radius: 8px; padding: 4px;">
+          <option value="en">English</option>
+          <option value="fr">Français</option>
+          <option value="hi">हिंदी</option>
+        </select>
+      </li>
+    </ul>
   </section>
 
-
   <!-- Predict -->
-
   <section id="Predict">
     <div class="border">
-      <form action="{{ url_for( 'predict' ) }}" method="post">
+      <form action="{{ url_for('predict') }}" method="post">
         <div class="container">
           <div class="col1">
             <div class="card">
               <div class="inputs">
-                <h5 class="title">Departure Date</h5>
+                <h5 class="title" data-translate-key="departureDate">Departure Date</h5>
                 <input type="datetime-local" name="departure" id="departure" required="required">
               </div>
             </div>
 
-
             <div class="card">
               <div class="inputs">
-                <h5 class="title">Source</h5>
+                <h5 class="title" data-translate-key="source">Source</h5>
                 <select name="source" id="source select1" required="required" class="select1"
                   onchange="getSelectValue(this.value)">
                   <option value="Bangalore">Bangalore</option>
@@ -68,10 +61,9 @@
               </div>
             </div>
 
-
             <div class="card">
               <div class="inputs">
-                <h5 class="title">Stopage</h5>
+                <h5 class="title" data-translate-key="stopage">Stopage</h5>
                 <select name="stopage" required="required">
                   <option value="0">Non-Stop</option>
                   <option value="1">1</option>
@@ -87,15 +79,14 @@
           <div class="col2">
             <div class="card">
               <div class="inputs">
-                <h5 class="title">Arrival Date</h5>
+                <h5 class="title" data-translate-key="arrivalDate">Arrival Date</h5>
                 <input type="datetime-local" name="arrival" id="arrival" required="required">
               </div>
             </div>
 
-
             <div class="card">
               <div class="inputs">
-                <h5 class="title">Destination</h5>
+                <h5 class="title" data-translate-key="destination">Destination</h5>
                 <select name="destination" id="destination select2" required="required" class="select2">
                   <option value="Mumbai">Mumbai</option>
                   <option value="Delhi">Delhi</option>
@@ -106,10 +97,9 @@
               </div>
             </div>
 
-
             <div class="card">
               <div class="inputs">
-                <h5 class="title">Select Airline</h5>
+                <h5 class="title" data-translate-key="selectAirline">Select Airline</h5>
                 <select name="airline" id="airline" required="required" class="select2">
                   <option value="Vistara">Vistara</option>
                   <option value="Air India">Air India</option>
@@ -126,31 +116,26 @@
         </div>
 
         <center>
-          <input type="submit" value="Predict">
-          <br>
-          <br>
+          <input type="submit" value="Predict" data-translate-key="predictButton">
+          <br><br>
           <h4>{{ prediction_text }}</h4>
         </center>
-        
-    </div>
-    </form>
+      </form>
     </div>
   </section>
 
-
   <footer id="Footer">
     <div class="footer">
-        <!-- <h3> Flight Price Prediction </h3> -->
-
         <ul class="socials">
-            <li><a target="_blank" href="https://github.com/krittika2004/Flight-Price-Prediction-Project">
-                <i class="fa fa-github"></i></a>
+            <li>
+              <a target="_blank" href="https://github.com/krittika2004/Flight-Price-Prediction-Project">
+                <i class="fa fa-github"></i>
+              </a>
             </li>
         </ul>
     </div>
-
     <div class="last">
-        <p>Developed by:</p>
+        <p data-translate-key="footerDevelopedBy">Developed by:</p>
         <ul class="developer-list">
             <li>Krittika Jari - 22103090</li>
             <li>Rajendra Pratap Singh Dhaliwal - 22103094</li>
@@ -158,22 +143,19 @@
             <li>Abhay Singhal - 22103101</li>
         </ul>
     </div>
-</footer>
-
+  </footer>
 
   <script>
     function getSelectValue(select1) {
-      if (select1 != '') {
+      if (select1 !== '') {
         $(".select2 option[value='" + select1 + "']").hide();
         $(".select2 option[value!='" + select1 + "']").show();
       }
     }
   </script>
 
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
-    integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- Include the translation script -->
+  <script src="../static/translate.js"></script>
 </body>
 
 </html>
