--- a/Flight_Prediction_Final/templates/404.html
+++ b/Flight_Prediction_Final/templates/404.html
@@ -1,64 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Flight Price Prediction</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='logo.jpg') }}">
+
+    <!-- Google Fonts & Icons -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     
-        <link rel="shortcut icon" href="{{ url_for('static', filename='logo.jpg') }}">
-    
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-        <title>Flight Price Prediction</title>
-    
-        <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-        <!-- CSS -->
-        <link rel="stylesheet" href="../static/style.css" />
-    
-    
-    </head>
-    
-<link rel="stylesheet" href="../static/404.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/404.css">
+
+    <!-- Lottie Player -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest"></script>
+
+</head>
+
 <body>
+    <div class="wrapper">
+        <!-- Header -->
+        <header id="Main">
+            <a href="{{ url_for('index') }}">
+                <h3>FLIGHT PRICE PREDICTION</h3>
+            </a>
+            <nav>
+                <ul id="navbar">
+                    <li><a class="active" href="{{ url_for('index') }}">HOME</a></li>
+                    <li><a href="{{ url_for('predict') }}">PREDICTION</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <section id="Main">
-        <a href="{{ url_for( 'index' ) }}">
-            <h3>FLIGHT PRICE PREDICTION</h3>
-        </a>
-        <div>
-            <ul id="navbar">
-                <li><a class="active" href="{{ url_for( 'index' ) }}">HOME</a></li>
-                <li><a href="{{ url_for( 'predict' ) }}">PREDICTION</a></li>
-                <!-- <li><a href="#">OVERVIEW</a></li> -->
-                <!-- <li><a href="#"><button class="btn success">CODE</button></a></li> -->
-            </ul>
-        </div>
-    </section>
+        <!-- 404 Error Section -->
+        <main id="not_found_message">
+            <div class="airplane-container">
+                <div class="airplane"></div>
+            </div>
+            
+            <div class="lottie-container">
+            <lottie-player 
+                    class="lottie-player"
+                    src="../static/animation2.json" 
+                    background="transparent" 
+                    speed="1" 
+                    loop 
+                    autoplay>
+                </lottie-player>
+            </div>
+            <h2>Oops! This flight has gone off course.</h2>
+            <p>The page you're looking for doesn't exist.</p>
+            <a href="{{ url_for('index') }}" class="home-button">Return to Home</a>
 
-    <div id="not_found_message">
-        <h1>Oops! The page you're looking for doesn't exist. 😓😓</h1>
+            <!-- Lottie Animation -->
+            <div class="lottie-container">
+                <lottie-player 
+                    class="lottie-player"
+                    src="../static/animation.json" 
+                    background="transparent" 
+                    speed="1" 
+                    loop 
+                    autoplay>
+                </lottie-player>
+            </div>
+
+        </main>
     </div>
 
-
+    <!-- Footer -->
     <footer id="Footer">
         <div class="footer">
-            <!-- <h3> Flight Price Prediction </h3> -->
-    
             <ul class="socials">
                 <li><a target="_blank" href="https://github.com/krittika2004/Flight-Price-Prediction-Project">
                     <i class="fa fa-github"></i></a>
                 </li>
-                <!-- Uncomment if needed
-                <li><a target="_blank" href="https://www.linkedin.com/in/kunaldhavale/">
-                    <i class="fa fa-linkedin-square"></i></a>
-                </li> 
-                -->
             </ul>
         </div>
-    
+
         <div class="last">
             <p>Developed by:</p>
             <ul class="developer-list">
@@ -69,7 +91,5 @@
             </ul>
         </div>
     </footer>
-    
-    
 </body>
 </html>
