--- a/Flight_Prediction_Final/templates/404.html
+++ b/Flight_Prediction_Final/templates/404.html
@@ -41,23 +41,23 @@
             <div class="airplane-container">
                 <div class="airplane"></div>
             </div>
-            
-            
-            <div class="lottie-container">
-            <lottie-player 
-                    class="lottie-player"
-                    src="../static/animation2.json" 
-                    background="transparent" 
-                    speed="1" 
-                    loop 
-                    autoplay>
-                </lottie-player>
-            </div>
-            <h2>Oops! This flight has gone off course.</h2>
-            <p>The page you're looking for doesn't exist.</p>
+
+            <h1 >404</h1>
+            <br><br><br><br><br><br><br><br>
 
             
-            <a href="{{ url_for('index') }}" class="home-button">Return to Home</a>
+            <br><br><br><br><br><br><br>
+            <div class="error-msg">
+
+                <h2>Oops! This flight has gone off course.</h2>
+                <p>The page you're looking for doesn't exist.</p>
+
+
+            </div>
+            
+
+            
+           
 
             
 
