--- a/Flight_Prediction_Final/templates/index.html
+++ b/Flight_Prediction_Final/templates/index.html
@@ -35,6 +35,9 @@
                 <li><a href="{{ url_for( 'predict' ) }}">PREDICTION</a></li>
                 <!-- <li><a href="#">OVERVIEW</a></li> -->
                 <!-- <li><a href="#"><button class="btn success">CODE</button></a></li> -->
+                <li id="google_translate_element_container">
+                    <div id="google_translate_element"></div>
+                </li>
             </ul>
         </div>
     </section>
@@ -135,8 +138,15 @@
             </ul>
         </div>
     </footer>
-    
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement({
+            pageLanguage: 'en', // Your site's original language
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+          }, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
-
 </html>
