changed Home Page UI

--- a/Flight_Prediction_Final/templates/index.html
+++ b/Flight_Prediction_Final/templates/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
 
-    <section id="Front">
+    <div id="Front">
         <div class="page">
             <h2>About Our Project</h2>
             <p>The goal of the flight price prediction project is to develop a model that can accurately predict the
@@ -54,7 +54,7 @@
                 the flight based on some parameters like total stops, journey Day, journey month, Air India, Indigo,
                 source, destination, etc. The project aims to create a predictive model that can forecast flight prices with a high degree of accuracy. The flight price prediction project can provide valuable insights for travelers, travel agencies, and airlines to optimize their travel planning, pricing strategies.</p>
         </div>
-    </section>
+    </div>
 
     <center>
         <section id="Model">
@@ -70,25 +70,25 @@
                         <th>93.70%</th>
                     </tr> -->
                     <tr>
-                        <th>Linear Regression</th>
-                        <th>77.00%</th>
+                        <td>Linear Regression</td>
+                        <td>77.00%</td>
                     </tr>
                     <!-- <tr>
                         <th>XGBoost</th>
                         <th>82.00%</th>
                     </tr> -->
                     <tr>
-                        <th>Random Forest Regressor</th>
-                        <th>93.80%</th>
+                        <td>Random Forest Regressor</td>
+                        <td>93.80%</td>
                     </tr>
                 </table>
             </div>
 
             <div class="acc">
-                <h1></h1>
+                <h1>Regression Model R2 Scores</h1>
                 <table>
                     <tr>
-                        <th>r2_Score</th>
+                        <th >r2_Score</th>
                         <th>Score</th>
                     </tr>
                     <!-- <tr>
@@ -96,16 +96,16 @@
                         <th>0.89</th>
                     </tr> -->
                     <tr>
-                        <th>Linear Regression</th>
-                        <th>0.60</th>
+                        <td>Linear Regression</td>
+                        <td>0.60</td>
                     </tr>
                     <!-- <tr>
                         <th>XGBoost</th>
                         <th>0.60</th>
                     </tr> -->
                     <tr>
-                        <th>Random Forest Regressor</th>
-                        <th>0.90</th>
+                        <td>Random Forest Regressor</td>
+                        <td>0.90</td>
                     </tr>
                 </table>
             </div>
