--- a/Flight_Prediction_Final/templates/index.html
+++ b/Flight_Prediction_Final/templates/index.html
@@ -17,7 +17,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../static/style.css" />
+    <!-- <link rel="stylesheet" href="../static/style.css" /> -->
+
+    <!-- CSS -- dark mode -->
+    <link rel="stylesheet" href="../static/darkmode.css" />
 
 
 </head>
