--- a/Flight_Prediction_Final/templates/predict.html
+++ b/Flight_Prediction_Final/templates/predict.html
@@ -19,7 +19,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../static/predict.css" />
+  <!-- <link rel="stylesheet" href="../static/predict.css" /> -->
+  <link rel="stylesheet" href="../static/predict-dark.css" />
 
 </head>
 
