--- a/Flight_Prediction_Final/static/predict.css
+++ b/Flight_Prediction_Final/static/predict.css
@@ -7,20 +7,25 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", serif;
 }
+
 
 body {
   width: 100%;
-  background-color: #ffffff;
-  line-height: 1.6;
+  background-color: #fff;
+  font-family: "Poppins", serif;
+  zoom: 80%;
 }
 
 
 /* Main Start */
 
+
 #Main {
-  padding: 10px 40px;
+  padding-top: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -62,6 +67,7 @@ body {
   font-size: 30px;
   font-weight: 600;
 }
+
 #navbar {
   margin: 10px;
   display: flex;
@@ -80,23 +86,30 @@ body {
 
 #navbar li a {
   color: #fff;
-  line-height: 20px;
+  line-height: 60px;
   text-decoration: none;
   font-size: 18px;
   font-weight: 600;
   transition: 0.3s ease;
   letter-spacing: .5px;
   cursor: pointer;
-  padding: 10px 15px;
-  border-radius: 5px;
 }
 
 #navbar li a:hover,
 #navbar li a.active {
-  background: black;
-  color: #fff; 
-  transition: background 0.3s ease;
+  color: #222;
+  box-sizing: content-box;
+  padding: 0;
+  transition: color .1s linear;
 }
+
+#navabar li a.active::after,
+#navbar li a:hover::after {
+  height: 2px;
+  position: absolute;
+  transition: color .1s linear;
+}
+
 .btn {
   background-color: #333;
   font-size: 15px;
