added weather prediction

--- a/Flight_Prediction_Final/templates/index.html
+++ b/Flight_Prediction_Final/templates/index.html
@@ -56,6 +56,7 @@
         <div>
             <ul id="navbar">
                 <li><a class="active" href="{{ url_for( 'index' ) }}">HOME</a></li>
+                <li><a class="active" href="{{ url_for( 'weather' ) }}">PREDICT WEATHER</a></li>
                 <li><a href="{{ url_for( 'predict' ) }}">PREDICTION</a></li>
                 <li id="google_translate_element_container">
                     <div id="google_translate_element"></div>
